# SmartEstate

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  README_PHASE1.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.md  streamlit_app.py
api/: main.py
kaggle/working/: inference_production.py
pages/: 1_📥_Ingest.py  2_📐_Floorplan.py  3_💬_Chat.py
phase3/graph/: build_graph.py  prompts.py  router.py  state.py
phase3/graph/nodes/: planner.py  rag_agent.py  recall_node.py  renovation_agent.py  report_agent.py  sql_agent.py
scripts/: convert_checkpoint_to_inference.py  ingest.py  prepare_easyocr_models.py  run_tests.py
smartestate/: config.py  db.py  embedding.py  es_client.py  etl.py  floorplan.py  llm.py  models.py
smartestate/tools/: llm_provider.py  memory.py  pdf.py  search.py  sql.py
tests/: conftest.py  test_phase1.py  test_phase2_smoke.py  test_phase2_utils.py
tests/phase3/: test_memory_tools.py  test_planner.py  test_router.py
